# FinSight

./: .gitignore  .gitignroe  README.md
backend/: finsight.db  main.py  pyproject.toml
backend/models/: database.py  models.py  schemas.py
backend/notebooks/: parser.ipynb
backend/routers/: statements.py
backend/services/: pdf_parser.py
backend/utils/: auth.py  logger.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Auth.jsx  Dashboard.jsx  FileUpload.jsx  HistoryView.jsx  MonthlyView.jsx
frontend/src/utils/: finance.js
